--- a/foody/www/templates/restaurantMenu.html
+++ b/foody/www/templates/restaurantMenu.html
@@ -2,11 +2,16 @@
   <ion-content>
 
     <ion-list>
-      <ion-item  ng-repeat="row in items[0].menu[0]" href="#">
+      <ion-item  ng-repeat="row in items[restaurantId].menu" href="#">
+        <label class="button button-icon icon ion-ios7-minus-outline">
+          <input type="checkbox" ng-click="clickItem(item); $event.stopPropagation();" ng-model="item.checked">
+        </label>
         <img src={{row.baseimg}}>
         <h2>{{row.basemenu}}</h2>
       </ion-item>
     </ion-list>
+
+      <button class="primary-buttons">Add</button>
 
   </ion-content>
 
